update contact info

--- a/about/contacts.qmd
+++ b/about/contacts.qmd
@@ -4,27 +4,29 @@ The SWAMP Team is composed of multiple team members at the State Water Board wit
 
 ## SWAMP Unit
 
-+--------------------+------------------------------+--------------------------------------------------------------------------------------------------------------------------------+
-| Name               | Title                        | Program Area(s)                                                                                                                |
-+====================+==============================+================================================================================================================================+
-| Ali Dunn           | Unit Supervisor              | [SWAMP Unit](https://www.waterboards.ca.gov/water_issues/programs/swamp/)                                                      |
-+--------------------+------------------------------+--------------------------------------------------------------------------------------------------------------------------------+
-| Elena Suglia       | Environmental Scientist      | Data science, data visualization (R)                                                                                           |
-|                    |                              |                                                                                                                                |
-|                    |                              | Science communication                                                                                                          |
-|                    |                              |                                                                                                                                |
-|                    |                              | Racial equity data projects and communication                                                                                  |
-|                    |                              |                                                                                                                                |
-|                    |                              | [Openscapes](https://cawaterboarddatacenter.github.io/swrcb-openscapes/)                                                       |
-+--------------------+------------------------------+--------------------------------------------------------------------------------------------------------------------------------+
-| Michelle Tang      | Research Data Specialist III | [SWAMP Data Dashboard](https://gispublic.waterboards.ca.gov/swamp-data/)                                                       |
-|                    |                              |                                                                                                                                |
-|                    |                              | Data science, data visualization and programming (JavaScript, Python)                                                          |
-+--------------------+------------------------------+--------------------------------------------------------------------------------------------------------------------------------+
-| Shuka Rastegarpour | Environmental Scientist      | [SWAMP Statewide Bioassessment Program](https://www.waterboards.ca.gov/water_issues/programs/swamp/bioassessment/) Coordinator |
-+--------------------+------------------------------+--------------------------------------------------------------------------------------------------------------------------------+
-| Vacant             | Environmental Scientist      | Technical and administrative support                                                                                           |
-+--------------------+------------------------------+--------------------------------------------------------------------------------------------------------------------------------+
++---------------+------------------------------+---------------------------------------------------------------------------------------------------------------------------------------+
+| Name          | Title                        | Program Area(s)                                                                                                                       |
++===============+==============================+=======================================================================================================================================+
+| Ali Dunn      | Unit Supervisor              | [SWAMP Unit](https://www.waterboards.ca.gov/water_issues/programs/swamp/)                                                             |
++---------------+------------------------------+---------------------------------------------------------------------------------------------------------------------------------------+
+| Elena Suglia  | Environmental Scientist      | Data science, data visualization (R)                                                                                                  |
+|               |                              |                                                                                                                                       |
+|               |                              | Science communication                                                                                                                 |
+|               |                              |                                                                                                                                       |
+|               |                              | [Equity Data Handbook](https://cawaterboarddatacenter.github.io/equity-data-handbook/), Racial equity data projects and communication |
+|               |                              |                                                                                                                                       |
+|               |                              | [Openscapes](https://cawaterboarddatacenter.github.io/swrcb-openscapes/)                                                              |
++---------------+------------------------------+---------------------------------------------------------------------------------------------------------------------------------------+
+| Hannah Merges | CA Sea Grant Fellow          |                                                                                                                                       |
++---------------+------------------------------+---------------------------------------------------------------------------------------------------------------------------------------+
+| Michelle Tang | Research Data Specialist III | [SWAMP Data Dashboard](https://gispublic.waterboards.ca.gov/swamp-data/)                                                              |
+|               |                              |                                                                                                                                       |
+|               |                              | Data science, data visualization and programming (JavaScript, Python)                                                                 |
++---------------+------------------------------+---------------------------------------------------------------------------------------------------------------------------------------+
+| Vacant        | Environmental Scientist      | [SWAMP Statewide Bioassessment Program](https://www.waterboards.ca.gov/water_issues/programs/swamp/bioassessment/) Coordinator        |
++---------------+------------------------------+---------------------------------------------------------------------------------------------------------------------------------------+
+| Vacant        | Environmental Scientist      | Technical and administrative support                                                                                                  |
++---------------+------------------------------+---------------------------------------------------------------------------------------------------------------------------------------+
 
 ## SWAMP IQ
 
@@ -38,8 +40,6 @@ The SWAMP Team is composed of multiple team members at the State Water Board wit
 | Candice Heinz             | Environmental Scientist | Algae Taxonomy                                                                                                                                  |
 +---------------------------+-------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
 | Cui (Scarlett) Li-Gherman | Scientific Aid          |                                                                                                                                                 |
-+---------------------------+-------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
-| Delany Broome             | Environmental Scientist | Chemistry Data Manager                                                                                                                          |
 +---------------------------+-------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
 | Jennifer Salisbury        | Environmental Scientist | Tissue Data Manager                                                                                                                             |
 |                           |                         |                                                                                                                                                 |
@@ -57,52 +57,54 @@ The SWAMP Team is composed of multiple team members at the State Water Board wit
 |                           |                         |                                                                                                                                                 |
 |                           |                         | [SWAMP Statewide Toxicology and Contaminants Program](https://www.waterboards.ca.gov/water_issues/programs/swamp/spot/) Coordinator             |
 +---------------------------+-------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
+| Vacant                    | Environmental Scientist | Chemistry Data Manager                                                                                                                          |
++---------------------------+-------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
 
 For more information, visit the [SWAMP IQ Wiki](https://sites.google.com/view/swamp-iq-wiki/swamp-iq-liaisons-and-data-managers)
 
 ## OIMA
 
-+-----------------+----------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Name            | Title                                  | Program Area(s)                                                                                                                                                                                                 |
-+=================+========================================+=================================================================================================================================================================================================================+
-| Greg Gearheart  | Deputy Director                        | [OIMA](https://www.waterboards.ca.gov/resources/oima/)                                                                                                                                                          |
-+-----------------+----------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Andrew Hamilton | Assistant Deputy Director              | [OIMA](https://www.waterboards.ca.gov/resources/oima/)                                                                                                                                                          |
-+-----------------+----------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Anna Holder     | Senior Specialist                      | Open Data Science, Equity & Tribal Coordinator                                                                                                                                                                  |
-|                 |                                        |                                                                                                                                                                                                                 |
-|                 |                                        | [Openscapes](https://cawaterboarddatacenter.github.io/swrcb-openscapes/)                                                                                                                                        |
-|                 |                                        |                                                                                                                                                                                                                 |
-|                 |                                        | [Tribal Coordinator](https://www.waterboards.ca.gov/resources/oima/tribal_water_data_initiatives/)                                                                                                              |
-|                 |                                        |                                                                                                                                                                                                                 |
-|                 |                                        | Racial Equity Trainer                                                                                                                                                                                           |
-+-----------------+----------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Carly Nilson    | Senior Specialist                      | [SWAMP Statewide Freshwater and Estuarine Harmful Algal Bloom (FHAB) Program](https://www.waterboards.ca.gov/water_issues/programs/swamp/freshwater_cyanobacteria.html) Coordinator, OIMA Procurement Lead      |
-+-----------------+----------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Chad Fearing    | Associate Governmental Program Analyst | Contracts                                                                                                                                                                                                       |
-+-----------------+----------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Devan Burke     | Associate Governmental Program Analyst | Contracts                                                                                                                                                                                                       |
-|                 |                                        |                                                                                                                                                                                                                 |
-|                 |                                        | [Openscapes](https://cawaterboarddatacenter.github.io/swrcb-openscapes/)                                                                                                                                        |
-|                 |                                        |                                                                                                                                                                                                                 |
-|                 |                                        | Racial equity data projects and communication                                                                                                                                                                   |
-+-----------------+----------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Erick Burres    | Citizen Science Coordinator            | [SWAMP Clean Water Team](https://www.waterboards.ca.gov/water_issues/programs/swamp/cwt_volunteer.html)                                                                                                         |
-+-----------------+----------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Kevin Song      | Stanford Fellow                        | [Tribal Data Initiatives](https://www.waterboards.ca.gov/resources/oima/tribal_water_data_initiatives/)                                                                                                         |
-|                 |                                        |                                                                                                                                                                                                                 |
-|                 |                                        | Tribal Water Data [Map](https://gispublic.waterboards.ca.gov/portal/home/item.html?id=a71c1841907240e1a4d896c8cf2302a8) & [User Manual](https://cawaterboarddatacenter.github.io/tribal-water-data-map-manual/) |
-+-----------------+----------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Marisa VanDyke  | Senior Specialist                      | [SWAMP Statewide Freshwater and Estuarine Harmful Algal Bloom (FHAB) Program](https://www.waterboards.ca.gov/water_issues/programs/swamp/freshwater_cyanobacteria.html) Coordinator                             |
-+-----------------+----------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Vacant          | Environmental Program Manager          | [California Water Quality Monitoring Council](https://mywaterquality.ca.gov/)                                                                                                                                   |
-+-----------------+----------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
++-----------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Name            | Title                                  | Program Area(s)                                                                                                                                                                                            |
++=================+========================================+============================================================================================================================================================================================================+
+| Greg Gearheart  | Deputy Director                        | [OIMA](https://www.waterboards.ca.gov/resources/oima/)                                                                                                                                                     |
++-----------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Andrew Hamilton | Assistant Deputy Director              | [OIMA](https://www.waterboards.ca.gov/resources/oima/)                                                                                                                                                     |
++-----------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Anna Holder     | Senior Specialist                      | Open Data Science, Equity & Tribal Coordinator                                                                                                                                                             |
+|                 |                                        |                                                                                                                                                                                                            |
+|                 |                                        | [Openscapes](https://cawaterboarddatacenter.github.io/swrcb-openscapes/)                                                                                                                                   |
+|                 |                                        |                                                                                                                                                                                                            |
+|                 |                                        | [Tribal Coordinator](https://www.waterboards.ca.gov/resources/oima/tribal_water_data_initiatives/)                                                                                                         |
+|                 |                                        |                                                                                                                                                                                                            |
+|                 |                                        | [Equity Data Handbook](https://cawaterboarddatacenter.github.io/equity-data-handbook/), Racial Equity Trainer                                                                                              |
++-----------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Carly Nilson    | Senior Specialist                      | [SWAMP Statewide Freshwater and Estuarine Harmful Algal Bloom (FHAB) Program](https://www.waterboards.ca.gov/water_issues/programs/swamp/freshwater_cyanobacteria.html) Coordinator, OIMA Procurement Lead |
++-----------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Chad Fearing    | Associate Governmental Program Analyst | Contracts                                                                                                                                                                                                  |
++-----------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Devan Burke     | Associate Governmental Program Analyst | Contracts                                                                                                                                                                                                  |
+|                 |                                        |                                                                                                                                                                                                            |
+|                 |                                        | [Openscapes](https://cawaterboarddatacenter.github.io/swrcb-openscapes/)                                                                                                                                   |
+|                 |                                        |                                                                                                                                                                                                            |
+|                 |                                        | [Equity Data Handbook](https://cawaterboarddatacenter.github.io/equity-data-handbook/), Racial equity data projects and communication                                                                      |
++-----------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Erick Burres    | Citizen Science Coordinator            | [SWAMP Clean Water Team](https://www.waterboards.ca.gov/water_issues/programs/swamp/cwt_volunteer.html)                                                                                                    |
++-----------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Marisa VanDyke  | Senior Specialist                      | [SWAMP Statewide Freshwater and Estuarine Harmful Algal Bloom (FHAB) Program](https://www.waterboards.ca.gov/water_issues/programs/swamp/freshwater_cyanobacteria.html) Coordinator                        |
++-----------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Vacant          | Environmental Program Manager          | [California Water Quality Monitoring Council](https://mywaterquality.ca.gov/)                                                                                                                              |
++-----------------+----------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 
 ## Former Fellows & Interns
 
 +-----------------------------------------------------------------------------------------------------+-----------------------------+-----------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Name                                                                                                | Title                       | Year      | Primary Project Area(s) & Products                                                                                                                                                                                                                                                                                                                                                                              |
 +=====================================================================================================+=============================+===========+=================================================================================================================================================================================================================================================================================================================================================================================================================+
+| Kevin Song                                                                                          | Stanford Fellow             | 2024      | [Tribal Data Initiatives](https://www.waterboards.ca.gov/resources/oima/tribal_water_data_initiatives/)                                                                                                                                                                                                                                                                                                         |
+|                                                                                                     |                             |           |                                                                                                                                                                                                                                                                                                                                                                                                                 |
+|                                                                                                     |                             |           | Tribal Water Data [Map](https://gispublic.waterboards.ca.gov/portal/home/item.html?id=a71c1841907240e1a4d896c8cf2302a8) & [User Manual](https://cawaterboarddatacenter.github.io/tribal-water-data-map-manual/)                                                                                                                                                                                                 |
++-----------------------------------------------------------------------------------------------------+-----------------------------+-----------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Elena Suglia\*                                                                                      | California Sea Grant Fellow | 2024      | [SWAMP eDNA Metabarcoding Monitoring and Analysis Project (SeMMAP)](https://experience.arcgis.com/experience/db3a30220d0d4bdea684781cdaef5230/) Special Study on Temporal Variation, Bioaccumulation Region 2 Realignment, [Safe to Swim Map](https://mywaterquality.ca.gov/safe_to_swim/interactive_map/) v2.0, [Openscapes](https://openscapes.org/) Champions Cohort Mentor, Racial Equity Data Subcommittee |
 +-----------------------------------------------------------------------------------------------------+-----------------------------+-----------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Leah Benton                                                                                         | CivicSpark Fellow           | 2023-2024 | [Tribal Data Initiatives](https://www.waterboards.ca.gov/resources/oima/tribal_water_data_initiatives/)                                                                                                                                                                                                                                                                                                         |
