--- a/admin/training.qmd
+++ b/admin/training.qmd
@@ -66,7 +66,7 @@ External Training refers to external events (training, conferences, PE/PG licens
 -   Training Liaison submits them to Training Services for processing
 -   Once your request is fully approved, Training Services will either process registration on your behalf and inform you of your approval or will send you authorization to self-register and seek reimbursement.
 
-See the [Professional Development Section](https://cawaterboarddatacenter.github.io/swamp-manual/development.html) for a list of conferences that may be of interest.
+See the [Professional Development Section](https://cawaterboards.sharepoint.com/Training/Documents/conf_n_symp_list.pdf) for a list of conferences that may be of interest.
 
 ## Resources
 
